--- a/chat_client/CMakeLists.txt
+++ b/chat_client/CMakeLists.txt
@@ -1,3 +1,7 @@
+# Audio-Visual Chat Client
+# Author: Tom Sapletta
+# License: Apache-2.0
+
 cmake_minimum_required(VERSION 3.16)
 project(chat_client VERSION 1.0.0 LANGUAGES CXX)
 
