--- a/chat_client/ChatClient.AppDir/usr/share/applications/chat_client.desktop
+++ b/chat_client/ChatClient.AppDir/usr/share/applications/chat_client.desktop
@@ -4,7 +4,7 @@ Comment=Cross-platform audio-visual chat client with FLTK
 Exec=chat_client
 Icon=chat_client
 Type=Application
-Categories=Network;Chat;AudioVideo;
+Categories=Network;AudioVideo;Chat;
 Terminal=false
 StartupNotify=true
 X-AppImage-Name=ChatClient
